working on functions for associated blog post

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -60,23 +60,23 @@
       "\n",
       " Directory of C:\\Users\\peter.kazarinoff\\Documents\\testing-scientific-code\n",
       "\n",
-      "02/17/2021  10:25 AM    <DIR>          .\n",
-      "02/17/2021  10:25 AM    <DIR>          ..\n",
+      "02/19/2021  02:43 PM    <DIR>          .\n",
+      "02/19/2021  02:43 PM    <DIR>          ..\n",
       "02/17/2021  09:30 AM             4,303 .gitignore\n",
       "02/17/2021  10:14 AM    <DIR>          .ipynb_checkpoints\n",
       "02/17/2021  09:34 AM    <DIR>          .pytest_cache\n",
-      "02/17/2021  10:01 AM    <DIR>          __pycache__\n",
-      "02/17/2021  10:25 AM            23,233 analysis.ipynb\n",
-      "02/17/2021  09:59 AM             1,911 analysis.py\n",
-      "02/17/2021  09:29 AM               983 analysis_script.py\n",
+      "02/17/2021  10:58 AM    <DIR>          __pycache__\n",
+      "02/17/2021  10:26 AM            23,233 analysis.ipynb\n",
+      "02/19/2021  02:43 PM             1,857 analysis.py\n",
+      "02/17/2021  10:42 AM               988 analysis_script.py\n",
       "02/17/2021  09:29 AM    <DIR>          data\n",
       "02/17/2021  09:29 AM            35,823 LICENSE\n",
-      "02/17/2021  09:29 AM                96 README.md\n",
-      "02/17/2021  10:00 AM                64 requirements.txt\n",
+      "02/17/2021  10:58 AM             1,099 README.md\n",
+      "02/17/2021  10:46 AM                79 requirements.txt\n",
       "02/17/2021  10:00 AM                14 runtime.txt\n",
-      "02/17/2021  10:15 AM    <DIR>          tests\n",
-      "               8 File(s)         66,427 bytes\n",
-      "               7 Dir(s)  68,459,294,720 bytes free\n"
+      "02/19/2021  02:28 PM    <DIR>          tests\n",
+      "               8 File(s)         67,396 bytes\n",
+      "               7 Dir(s)  60,178,698,240 bytes free\n"
      ]
     }
    ],
